--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
 # Dependencies
-node_modules
-.pnp
+node_modules/
+/.pnp
 .pnp.js
 
 # Testing
-coverage
+/coverage
 
 # Production
-dist
-build
+/build
+/dist
 
-# Misc
-.DS_Store
+# Environment files
 .env
 .env.local
 .env.development.local
@@ -23,6 +22,21 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor
-.vscode
-.idea
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Server uploads
+server/uploads/*
+!server/uploads/.gitkeep
