--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tiptap/extension-highlight": "^3.2.0",
     "@tiptap/extension-image": "^3.2.0",
     "@tiptap/extension-link": "^3.2.0",
+    "@tiptap/extension-placeholder": "^3.2.0",
     "@tiptap/extension-table": "^3.2.0",
     "@tiptap/extension-table-cell": "^3.2.0",
     "@tiptap/extension-table-header": "^3.2.0",
@@ -46,15 +47,19 @@
     "@tiptap/pm": "^3.2.0",
     "@tiptap/react": "^3.2.0",
     "@tiptap/starter-kit": "^3.2.0",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^24.2.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.536.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.8.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
