--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,13 @@
   "description": "",
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/jsdom": "^21.1.7",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsdom": "^26.1.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "sharp": "^0.34.3",
