--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm rebuild sharp --build-from-source"
   },
   "keywords": [],
   "author": "",
