--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm rebuild sharp --build-from-source"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
-    "sharp": "^0.32.6",
+    "sharp": "0.32.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
